Mon May 28 23:38:29 2001  George Lebl <jirka@5z.com>

	* Applying patch:

Sun May 27 16:14:44 2001  Michal Palczewski <mpalczew@u.washington.edu>

	* tasklist_icon.c: fix memory leak in 

Mon May 28 02:50:50 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], basep-widget.c, foobar-widget.c:  Set the USSize and
	  USPosition hints, as well as the Min/Max size hints to disallow
	  resizing.

Sun May 27 18:30:42 2001  George Lebl <jirka@5z.com>

	* Makefile.am, session.[ch], menu.c, gnome-panel-properties.c,
	  main.c, applet.c, gnome-run.c, panel-widget.c, panel.c: Implement
	  reading of defaults from a global directory.  At some close point
	  in the future the default config will be made a set of files and
	  installed and the default config that's hardcoded will disappear
	  (become something simple for failsafe reasons).  Also add a
	  LockDown (commie mode) and a NoRunBox configuration stuff for anal
	  sysadmins and kiosks.  It's untested, except that it doesn't
	  interfere with normal operation.

	* conditional.c: change "Conditional" to ":Conditional" since that
	  makes files nicer

Fri May 25 14:36:29 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: don't use the global for the clock_ebox

Fri May 25 00:52:35 2001  George Lebl <jirka@5z.com>

	* Makefile.am, conditional.[ch], gnome-panel-properties.c, session.c,
	  menu.c:  Support a "Conditional" key on panel, tearoff menu and
	  applet definitions and implement an conditional key getting if the
	  normal key doesn't work.  The conditions are a fairly full featured
	  C like conditions with currently not too many possible values.
	  This is the first step in making the default config be not
	  hardcoded.

Tue May 22 20:08:06 2001  George Lebl <jirka@5z.com>

	* main.c: fish get scared if you click at them and I hate studying
	  for finals

Tue May 22 01:15:26 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, menu.c, panel_config.c: multiscreen polishing and
	  fixes
