@@ -1,3 +1,9 @@
+Tue May 29 00:55:34 2001  George Lebl <jirka@5z.com>
+
+	* menu.c, drawer.c, extern.c, launcher.c, logout.c, session.c:  Never
+	  set commie mode or no runbox mode on root.  Don't add the
+	  preferences/properties menuitems, even for external applets.
+
 Mon May 28 23:38:29 2001  George Lebl <jirka@5z.com>
 
 	* Applying patch:
